fix(oc-dialog): Get rid of the overlay\ - Icrement Z-index of oc-dialog-dim\ - Increment z-index of oc-dialog- Insert oc-dialog-dim before oc-dialog\ - Co-authored-by: Co-author RayanBekri <rmt.bekri@gmail.com>" Signed-off-by: JEEEEEEEEEEEEEEEEEEEEEED <118366366+jadjoud@users.noreply.github.com>

--- a/core/src/jquery/css/jquery.ocdialog.scss
+++ b/core/src/jquery/css/jquery.ocdialog.scss
@@ -4,7 +4,7 @@
 	border-radius: var(--border-radius-large);
 	box-shadow: 0 0 30px var(--color-box-shadow);
 	padding: 24px;
-	z-index: 10000;
+	z-index: 100001;
 	font-size: 100%;
 	box-sizing: border-box;
 	min-width: 200px;
@@ -69,7 +69,7 @@
 .oc-dialog-dim {
 	background-color: #000;
 	opacity: .2;
-	z-index: 9999;
+	z-index: 100001;
 	position: fixed;
 	top: 0;
 	left: 0;
